# flake-templates

./: README.md  flake.nix
haskell/: .gitignore  flake.nix  haskell-template.cabal
rust/: Cargo.toml  README.md  default.nix  shell.nix
