cabal-version:      2.4
name:               haskell-template
version:            0.1.0.0
license:            Apache-2.0
copyright:          2022 Joshua Wong
author:             Joshua Wong

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE.txt
  README.md

executable haskell-template
  build-depends:
    , base          >=4.13.0.0 && <=4.18.0.0
    , bytestring
    , containers
    , data-default
    , mtl
    , text

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    NoStarIsType
    DataKinds
    DerivingVia
    LambdaCase
    MultiWayIf
    OverloadedStrings
    TypeFamilies

  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   GHC2021
